# Streamlit-LiteLLM-MLFlow

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  litellm_config.yaml  main.py  pyproject.toml  requirements.txt
.specstory/history/: 2025-09-21_06-23Z-refactor-authentication-into-reusable-modules.md  2025-09-21_08-21Z-剝離-rendering-邏輯到-pages.md  2025-09-21_08-27Z-troubleshooting-streamlit-page-switching-error.md  2025-09-21_16-32Z-log-user-info-in-mlflow-tracing.md  2025-09-22_01-20Z-如何自動解決pyproject-toml依賴.md  2025-09-22_02-31Z-ensure-litellm-proxy-uses-mlflow-tracking-uri.md  2025-09-22_03-29Z-update-script-for-image-upload-support.md  2025-09-22_04-04Z-整合-dockerfile-和-docker-compose.md  2025-09-22_08-14Z-研究-dockerfile-build-失敗原因.md
.specstory/others/: Dockerfile  Dockerfile_mix  Dockerfile_ori  README.md  README2.md  docker-compose.yml  environment.example  start.sh  stop.sh
.streamlit/: config.toml  secrets.toml
auth_pages/: 1_Simplest_Chat.py
notebooks/: MLFlow_load_trace.ipynb
pages/: 1_Simplest_Chat.py  account_page.py  litellm_multimodal_proxy_with_sdk.py  litellm_multimodal_proxy_with_sdk_chat.py  litellm_proxy_with_sdk.py  litellm_sdk.py  litellm_sdk_with_user_info.py  login.py  register.py  welcome_page.py
scripts/: ec2_setup.sh  ec2_setup_chatgpt.sh  start_tmux.sh
src/streamlit_litellm_mlflow/: __init__.py
src/streamlit_litellm_mlflow/auth/: __init__.py  authenticator.py  database.py  security.py  types.py  ui.py
